# MegaDown

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: lib.rs  main.jsx  main.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
ui/: megadown.slint
