[package]
name = "megadown"
version = "0.1.0"
description = "A high-performance MEGA public-link downloader built with Rust and Slint"
authors = ["MegaDown"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"
default-run = "megadown"

[build-dependencies]
slint-build = "1.16"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dependencies]
aes = "0.8"
base64 = "0.22"
ctr = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rfd = "0.15"
sanitize-filename = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
slint = "1.16"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
